<resources>
    <string name="app_name">UrCoco</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>

    <string name="account_fragment_title">帳戶</string>
    <string name="account_activity_title">新增帳戶</string>

    <string name="contentDescription">載入中</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_enter">確定</string>

    <string name="choose_month">選擇月份</string>
    <string name="choose_before">尋找過去</string>

    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>

    <string name="date">日期</string>

    <string name="cost">支出</string>
    <string name="income">收入</string>
    <string name="money">金額</string>
    <string name="content">描述</string>
    <string name="budget">預算</string>
    <string name="account">帳戶</string>
    
    <string name="input_account">輸入帳戶名稱</string>
    <string name="input_budget">輸入預算</string>
</resources>
