<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:padding="10dp"
    tools:showIn="@layout/activity_account_inster"
    tools:context=".AccountInsterActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="8dp"/>

    <LinearLayout
        android:id="@+id/accountLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textSize="@dimen/activity_sub_text_size"/>

        <TextView
            android:id="@+id/accountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_account"
            android:textColor="@color/Grey_800"
            android:textSize="@dimen/activity_body_text_size"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/budgetLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_margin="8dp"
            android:src="@mipmap/ic_local_atm_black_48dp"
            android:alpha="0.5"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budget"
                android:textSize="@dimen/activity_sub_text_size"/>

            <TextView
                android:id="@+id/budgetText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_budget"
                android:textColor="@color/Grey_800"
                android:textSize="@dimen/activity_body_text_size"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>