<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@drawable/wallpaper_v1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:gravity="bottom">

        <com.kuo.urcoco.common.CircleTextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageView" />

        <LinearLayout
            android:id="@+id/accountLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:paddingTop="@dimen/nav_header_vertical_spacing" android:text="@string/account"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:text="@string/app_name" android:id="@+id/textView" />

            </LinearLayout>

            <ImageView
                android:id="@+id/arrowImage"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/contentDescription"
                android:background="@mipmap/ic_arrow_drop_up_white_24dp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/heardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>

</LinearLayout>
