<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0000000"
    tools:showIn="@layout/activity_money_inster">

    <RelativeLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:orientation="horizontal">

                <com.kuo.urcoco.common.CircleTextView
                    android:id="@+id/user_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:textSize="@dimen/activity_title_text_size"
                    android:hint="@string/app_name"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <ImageButton
                        android:id="@+id/inster_icon"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/contentDescription"
                        android:scaleType="fitCenter"
                        android:padding="8dp"
                        android:background="@drawable/button_background_selector"
                        android:src="@mipmap/ic_send_black_36dp" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/contentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/type_icon"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/contentDescription"
                        android:src="@mipmap/ic_launcher"/>

                    <TextView
                        android:id="@+id/type_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="Urco"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/money_edit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:maxLength="10"
                        android:cursorVisible="false"
                        android:inputType="number"
                        android:padding="5dp"
                        android:gravity="right"
                        android:hint="0"
                        android:textColor="@color/Grey_800"
                        android:textSize="35sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:gravity="center"
                        android:text="TWD"
                        android:textColor="@color/Grey_800"
                        android:textSize="35sp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/cost_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/cost"
                    android:textColor="#FFF"
                    android:textSize="@dimen/activity_title_text_size"/>

                <TextView
                    android:id="@+id/income_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_selector"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/income"
                    android:textSize="@dimen/activity_title_text_size"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/contentDescription"
                    android:src="@mipmap/ic_mode_edit_black_36dp"
                    android:alpha="0.5"/>

                <EditText
                    android:id="@+id/content_edit"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:gravity="start"
                    android:background="@android:color/transparent"
                    android:hint="content..."/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Grey_600"/>

            <LinearLayout
                android:id="@+id/date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_selector"
                android:orientation="horizontal"
                android:clickable="true"
                android:gravity="center_vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginRight="8dp"
                    android:contentDescription="@string/contentDescription"
                    android:src="@mipmap/ic_event_black_36dp"
                    android:alpha="0.5"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="日期"
                        android:textColor="@color/Grey_600"
                        android:textSize="@dimen/activity_title_text_size"/>

                    <TextView
                        android:id="@+id/date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/activity_sub_text_size"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/foot_background"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/type_button"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/contentDescription"
                    android:background="@drawable/dark_button_selector"
                    android:src="@mipmap/ic_insert_photo_black_24dp" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <com.kuo.urcoco.common.WrapContentHeightGridView
        android:id="@+id/grid_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content_layout"
        android:layout_marginTop="10dp"
        android:background="@color/Grey_50"
        android:numColumns="4"/>

</RelativeLayout>